# openq-ng.linq2

liblinq/: defaultsocketregistry.cpp  defaultsocketregistry.h  icqlog.h  icqmain.cpp  icqmain.h  icqtypes.h  icqutils.cpp  icqutils.h  liblinq.pro  md5.cpp  md5.h  nullproxy.cpp  nullproxy.h  packet.cpp  packet.h  proxy.h  sessionlistener.h  socket.h  socketregistry.h  tcpsession.cpp  tcpsession.h  tcpsessionbase.h  textstream.cpp  textstream.h  udppacket.cpp  udppacket.h  udpsession.cpp  udpsession.h
liblinq/p2p/: filesession.cpp  filesession.h  messagesession.cpp  messagesession.h  p2p.pri
liblinq/proxy/: base64.c  base64.h  httpproxy.cpp  httpproxy.h  proxy.pri  sockstcpproxy.cpp  sockstcpproxy.h  socksudpproxy.cpp  socksudpproxy.h
linq/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mingw  README.win32  aclocal.m4  autogen.sh  config.h.in  config.h.mingw  configure  configure.in  linq-installer.nsi  linq.desktop  linq.spec
linq/m4/: ChangeLog  Makefile.in
linq/po/: ChangeLog  Makefile.mingw  POTFILES.in  linq.pot  zh_CN.gmo  zh_CN.po
linq/src/: GtkSocket.cpp  GtkSocket.h  LinQ.cpp  LinQ.h  LinqContactInfo.cpp  LinqContactInfo.h  LinqDB.cpp  LinqDB.h  LinqGlobalSetting.cpp  LinqGlobalSetting.h  LinqMain.cpp  LinqMain.h  LinqMsg.cpp  LinqMsg.h  LinqOption.cpp  LinqOption.h  LinqUserList.cpp  LinqUserList.h  LinqWindow.cpp  LinqWindow.h  LoginDlg.cpp  LoginDlg.h  MainWin.cpp  MainWin.h  MainWin_ChainView.cpp  MainWin_ChainView.h  MainWin_ContactView.cpp  MainWin_ContactView.h  MainWin_MobileView.cpp  MainWin_MobileView.h  MainWin_ServiceView.cpp  MainWin_ServiceView.h  Makefile.am  Makefile.in  Makefile.mingw  MsgManager.cpp  MsgManager.h  PrefsDlg.cpp  PrefsDlg.h  RegWizard.cpp  (+20 more)
linq/src/face/: Makefile.am  Makefile.in  Makefile.mingw
linq/src/pixmaps/: Makefile.am  Makefile.in  Makefile.mingw
linq/src/sound/: Makefile.am  Makefile.in
linq/src/win32/: Makefile.am  Makefile.in  global.mak  linqrc.rc  resource.h
linq/src/win32/nsis/: Makefile.am  Makefile.in
linqd/: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.in  linq.sql  linqd.init  linqd.spec
linqd/etc/: Makefile.am  Makefile.in  c2s.conf  httpd.conf  linqd.conf  logd.conf  modules.conf  resolver.conf  s2s.conf  sm.conf
linqd/src/: Makefile.am  Makefile.in  build_all.dsp  myicqd.dsw
linqd/src/c2s/: Makefile.am  Makefile.in  c2s.cpp  c2s.dsp  c2s.h  option.cpp  option.h  realserver.cpp  realserver.h  session.cpp  session.h  sessionhash.cpp  sessionhash.h
linqd/src/db/: Makefile.am  Makefile.in  db_mysql.cpp  db_mysql.dsp  db_odbc.cpp  db_odbc.dsp
linqd/src/httpd/: Makefile.am  Makefile.in  httpd.dsp  https.cpp  https.h  option.cpp  option.h  session.cpp  session.h  udpsocket.cpp  udpsocket.h
linqd/src/include/: Makefile.am  Makefile.in  dbconn.h  event.h  logger.h  mapi.h  modulelistener.h  pool.h  profile.h  proto.h  session.h  socketregistry.h  types.h
linqd/src/linqd/: Makefile.am  Makefile.in  c2s.cpp  c2s.h  clientsession.cpp  clientsession.h  eventthread.cpp  eventthread.h  icqmain.cpp  icqmain.h  module.cpp  module.h  modulelist.cpp  modulelist.h  myicqd.dsp  option.cpp  option.h  sessionhash.cpp  sessionhash.h
linqd/src/logd/: Makefile.am  Makefile.in  client.cpp  client.h  logapp.cpp  logapp.h  logd.dsp  logger.cpp  logger.h  option.cpp  option.h
linqd/src/modules/: Makefile.am  Makefile.in
linqd/src/modules/mod_admin/: Makefile.am  Makefile.in  admin.cpp  admin.h  client.cpp  client.h  mod_admin.dsp
linqd/src/modules/mod_log/: Makefile.am  Makefile.in  log.cpp  log.h  mod_log.dsp
linqd/src/modules/mod_message/: Makefile.am  Makefile.in  message.cpp  message.h  mod_message.dsp
linqd/src/modules/mod_offline/: Makefile.am  Makefile.in  mod_offline.dsp  offline.cpp  offline.h
linqd/src/modules/mod_presence/: Makefile.am  Makefile.in  mod_presence.dsp  presence.cpp  presence.h  stringset.cpp  stringset.h
linqd/src/modules/mod_roster/: Makefile.am  Makefile.in  mod_roster.dsp  roster.cpp  roster.h
linqd/src/modules/mod_search/: Makefile.am  Makefile.in  mod_search.dsp  search.cpp  search.h  sessionmanager.cpp  sessionmanager.h
linqd/src/modules/mod_vcard/: Makefile.am  Makefile.in  mod_vcard.dsp  vcard.cpp  vcard.h
linqd/src/resolver/: Makefile.am  Makefile.in  client.cpp  client.h  option.cpp  option.h  resolver.cpp  resolver.dsp  resolver.h
linqd/src/s2s/: Makefile.am  Makefile.in  listensocket.cpp  listensocket.h  option.cpp  option.h  resolver.cpp  resolver.h  s2s.cpp  s2s.dsp  s2s.h  server.cpp  server.h  serverhash.cpp  serverhash.h  sessionmanager.cpp  sessionmanager.h
linqd/src/sm/: Makefile.am  Makefile.in  client.cpp  client.h  option.cpp  option.h  s2s.cpp  s2s.h  session.cpp  session.h  sessionhash.cpp  sessionhash.h  sessionmanager.cpp  sessionmanager.h  sm.dsp
linqd/src/utils/: Makefile.am  Makefile.in  configparser.cpp  configparser.h  dbmodule.cpp  dbmodule.h  debug.h  dllmodule.h  fdset.h  libutils.dsp  list.cpp  list.h  loggerimpl.cpp  loggerimpl.h  packet.cpp  packet.h  poll.cpp  poolimpl.cpp  poolimpl.h  profileimpl.cpp  profileimpl.h  select.cpp  servicemain.cpp  servicemain.h  socket.cpp  socket.h  sqlstmt.cpp  sqlstmt.h  sync.h  tcpstream.cpp  tcpstream.h  thread.h  workerthread.cpp  workerthread.h
linqd/src/utils/linux/: Makefile.am  Makefile.in  daemon.c  daemon.h  dllmodule.cpp  main.cpp  pidfile.cpp  pidfile.h  sync.cpp  thread.cpp
linqd/src/utils/win32/: Makefile.am  Makefile.in  dllmodule.cpp  getopt.c  getopt.h  main.cpp  ntservice.cpp  ntservice.h  sync.cpp  thread.cpp
