dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.52)

AC_INIT(linq, 2.0.0, http://myicq.cosoft.org.cn)
AC_CONFIG_SRCDIR(src/LinQ.cpp)
AM_INIT_AUTOMAKE([dist-bzip2])

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC

AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_PROG_INTLTOOL

dnl ================================================================
dnl Gettext stuff.
dnl ================================================================
GETTEXT_PACKAGE=linq
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
ALL_LINGUAS="zh_CN"
AM_GNU_GETTEXT

dnl
dnl Start of pkg-config checks
dnl
PKG_CHECK_MODULES(LINQ, gtkmm-2.0 >= 2.0.0)
LINQ_LIBS="\
	-ldb \
	${LINQ_LIBS}"

LINQ_CFLAGS="\
	-Wall \
	$LINQ_CFLAGS"


AC_SUBST(LINQ_LIBS)
AC_SUBST(LINQ_CFLAGS)


dnl ==========================================================================


AC_OUTPUT([
Makefile
intl/Makefile
po/Makefile.in
m4/Makefile
src/Makefile
src/face/Makefile
src/pixmaps/Makefile
src/sound/Makefile
src/win32/Makefile
src/win32/nsis/Makefile
])


echo "

Type \"make\" to compile LinQ.

"
