# Process this file with autoconf to produce a configure script.
AC_INIT(linqd, 2.0.0)
AC_CONFIG_SRCDIR([src/linqd/icqmain.cpp])
AM_INIT_AUTOMAKE([dist-bzip2])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([malloc.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([gethostbyname inet_ntoa memmove memset select socket strchr strdup poll])

LINQ_CONFIG_DIR="$sysconfdir/linqd"
AC_SUBST(LINQ_CONFIG_DIR)
LINQ_LIB_DIR="$libdir/linqd"
AC_SUBST(LINQ_LIB_DIR)

dnl debugging
AC_MSG_CHECKING(debugging support)
AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],
                    [Enable debugging support]),
              debug=yes)

if test x-$debug = "x-yes" ; then
    AC_MSG_RESULT(yes)
    AC_DEFINE(DEBUG,,[app debug enabled])
else
    AC_MSG_RESULT(no)
fi

dnl AC_CONFIG_FILES([])
AC_OUTPUT([
Makefile
etc/Makefile
src/Makefile
src/include/Makefile
src/utils/Makefile
src/utils/linux/Makefile
src/utils/win32/Makefile
src/c2s/Makefile
src/linqd/Makefile
src/sm/Makefile
src/s2s/Makefile
src/resolver/Makefile
src/httpd/Makefile
src/logd/Makefile
src/modules/Makefile
src/modules/mod_presence/Makefile
src/modules/mod_message/Makefile
src/modules/mod_roster/Makefile
src/modules/mod_vcard/Makefile
src/modules/mod_search/Makefile
src/modules/mod_offline/Makefile
src/modules/mod_log/Makefile
src/modules/mod_admin/Makefile
src/db/Makefile
])
